# hezi

./: .gitignore  AGENT.md  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-release.ps1
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.vue  ContextMenu.vue  CsvPreview.vue  EditorTabs.vue  FileTree.vue  MarkdownPreview.vue  MediaPreview.vue  ProjectSidebar.vue
src/stores/: editorStore.ts  projectStore.ts
src/types/: index.ts
src/utils/: csv.ts  fileSort.ts  fileType.ts  nativeApi.ts  path.ts  testNativeApi.ts
