[package]
name = "project-box"
version = "0.1.9"
description = "项目盒子 - 本地多项目文件管理与编辑工具"
authors = ["Project Box"]
edition = "2021"

[lib]
name = "project_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
dirs = "6"
open = "5"
pathdiff = "0.2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
trash = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
